public/css/style.css
.navbar {
    overflow: initial;
    max-height: 70px;
    margin-bottom: 0;
    border-radius: 0;
    background-color: #66A25C;
    color: #FFF;
    padding: 1% 0;
    font-size: 0.95em;
    border: 0;
}

 .navbar-brand {
     float: left;
     min-height: 47px;
     padding: 0 15px 5px;
}

 .navbar-inverse .navbar-nav li a{
     color: #FFF;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
}
     
 .navbar a:focus, .navbar a:hover {
     color: #D5D5D5 !important;
}
/*
 .dropdown a:focus, .dropdown a:hover {
     color: #D5D5D5 !important;
}
 
.dropdown {
    float: left;
    overflow: hidden;
}

.dropdownbtn, .dropdown-content, .dropdown-link, .dropdown-text {
    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
}
*/
.date-holder {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.dropdown .dropbtn {
    font-size: 0.95em;    
    border: none;
    outline: none;
    color: white;
    background-color: inherit;
    font: inherit;
    margin: 0;
}

/*
.navbar a:hover, .dropdown:hover .dropbtn {
    background-color: red;
}
*/

.dropdown-content {
    display: none;
    position: relative;
    background-color: #f9f9f9;
    min-width: 160px;
    height:auto;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

.dropdown-content a {
    position: relative;
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

.dropdown-content a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown-content {
    display: block;
}

#about-me {
    font-size: 40px;
}

#interests-bar {
    padding-left: 5%;
}

#back-to-profile {
    color: #66A25C;
    margin-left: 0.5%;
    font-size: 50px;
}

#uploadProfilePic {
    justify-content: center;
    text-align: center;
}

 .btn, .form-submit-button {
     font-size: 18px;
     color: #FFF;
     padding: 12px 22px;
     background: #66A25C;
     border: 2px solid #FFF;
}

.active {
   font-weight: bold;
   color: #FFF !important;
   text-decoration-color: #FFF;
}

 .container {
     margin: 4% auto;
}

#home-header {
     top: 38%;
     transform: translateY(-40%);
     position: absolute;
}
 footer {
     width: 100%;
     background-color: #66A25C;
     padding: 5%;
     color: #FFF;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
}

.footer-email {
    color: #FFF !important;
}

.email-text {
    margin-bottom: 5%;    
}

 .fa {
     padding: 15px;
     font-size: 25px;
     color: #FFF;
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
}
 .fa:visited, .fa active{
     color: #FFF !important; 
     text-decoration: none;
}

.fa:hover, .fa:focus {
    color: #D5D5D5;
    text-decoration: none;
}

.tiny-padding {
    padding-left: 3%;
    padding-right: 3%;
}

.small-padding {
    padding-left: 5%;
    padding-right: 5%;
}

.big-padding {
    padding-left: 20%;
    padding-right: 20%;
}

 #datepicker{
     width: 180px;
}
 #datepicker > span:hover{
     cursor: pointer;
}
 #sortable {
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 60%;
}
 #sortable li {
     font-size: 1.4em;
     height: 18px;
}
 #sortable li span {
     position: absolute;
     margin-left: -1.3em;
}

.form-check-label {
    font-weight: normal;
}

.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
    font-family: "Catamaran";
    font-size: 22px;
}

/* Modal Content/Box */
.modal-content {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
    text-align: center;
}

#welcome {
    font-family: 'Herr Von Muellerhoff';
    font-weight: normal;
    font-size: 100px;
    text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
    line-height: 0.5em;
    animation-duration: 1s;
}

#mealmate {
    font-family: 'Chewy';
    font-size: 70px;
    letter-spacing: 3px;
    text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
    animation-duration: 4s;
}

#title-description {
    font-size: 30px;
    font-weight: bold;
    text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
    animation-duration: 3s;
}

#get-started {
    animation-duration: 6s;
}

.smaller-break {
    margin-bottom:2%;
}

.animate-2s {
    animation-duration: 2s;
}

.pics-group p {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    margin: 0 auto;
    transform: translate(-50%,-50%);
    color: #FFF;
    font-size: 30px;
    font-weight: bold;
    text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
}

#profile-right {
    border-left-style: solid;
    border-left-color: #D5D5D5;
    border-left-width: thin;
}

.bold {
    font-weight: bold;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
}

.no-padding {
    padding-left: 0%;
    padding-right: 0%;
}

#userDiningPreferences {
    list-style-position:inside;
}

ol li {
    border: solid;
    border-radius: 5px;
    margin-bottom: 0.5%;
    margin-top: 0.5%;
    margin-left: 43%;
    margin-right: 43%;
}

body {
    font-family: 'Catamaran';
    font-size: 22px;
    padding-top: 70px; 
}

h1 {
   font-weight: bold; 
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.6);
}

h2 {
   font-weight: bold; 
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
}

.add-line:after {
    content:' ';
    display:block;
    border:2px solid;
    border-color: #66A25C;
    margin-top: 1%;
}

.margin-add-line:after {
    content:' ';
    display:block;
    border:2px solid;
    border-color: #66A25C;
    margin-top: 1%;
    margin-left: 23%;
    margin-right: 23%;
}

h4 {
    font-size: 20px;
}

#photoupload{
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.break-between-columns{
    display: none;
}

#userName {
    text-transform: uppercase;
}

#welcome-mobile {
    font-family: 'Herr Von Muellerhoff';
    font-weight: normal;
    font-size: 70px;
    text-shadow: 0px 4px 8px rgba(0, 0, 0, 1);
    animation-duration: 1s;
    display: none;
}

#profile-right {
    border-left-width: thin;
    border-left-color: #D5D5D5;
    border-left-style: solid;
}

.fa-handshake-o {
    padding-top: 4%;
    padding-bottom: 4%;
}

#mealmate-img {
    width: 130px;
}

@media (max-width: 1000px) {
    #get-started {
         font-size: 12px;
         padding: 10px 20px;
     }
    ol li {
        margin-left: 40%;
        margin-right: 40%;
    }
     #welcome {
        font-size: 80px;
    }

    #mealmate {
        font-size: 50px;
    }

    #title-description {
        font-size: 22px;
    }
    .break-between-columns {
         display: inline;
     }
    #userImage {
        padding-right:0%;
    }
     #profile-right {
        border-top-style: solid;
        border-top-color: #D5D5D5;
        border-top-width: thin;
        border-left-width: 0px;
    }
    body {
        padding-top: 66px; 
    }
    .header-lines {
        display: none;
    }
}


 @media (max-width: 900px) {
     #profile-pic {
         max-width: 200px;
         margin: 1% auto;
    }
     ol li {
        margin-left: 38%;
        margin-right: 38%;
    }
     .fa{
         font-size: 20px;
         padding: 10px;
    }
     .big-padding {
         padding-left: 5%;
         padding-right: 5%;
     }
    #get-started {
         font-size: 12px;
         padding: 9px 20px;
         border: 2px solid #FFF;
     }
    #title-description {
        font-size: 20px;
        line-height: 0.3em;
    }
     body {
        padding-top: 65px; 
    }
}
#find-mealmate-h1 {
        font-size: 34px;
        text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.6);
     }

#find-mealmate-button {
    margin-top: 2%;
}


@media (max-width: 815px) {
    #get-started, #title-description {
        display: none;
    }
    #mealmate {
        font-size: 50px;
    }
    body {
        padding-top: 63px; 
    }
}

@media (max-width: 760px) {
    .pics-group {
         padding-left: 10%;
         padding-right: 10%;
     }
    h1, #find-mealmate-h1 {
         font-size: 30px;
     }
    h2 {
         font-size: 25px;
    }
    ol li {
        margin-left: 36%;
        margin-right: 36%;
    }
    body {
        padding-top: 59px; 
    }
}

 @media (max-width: 600px) {
    #get-started, #title-description, #welcome, #dining-break {
        display: none;
    }
     
    #welcome-mobile {
        display: inline;
        line-height: 0.8em;
     }
     
    ol li {
        margin-left: 30%;
        margin-right: 30%;
    }
    #mealmate {
        font-size: 40px;
        letter-spacing: 3px;
        line-height: 0.5em;
    }
     #profile-pic {
         max-width: 300px;
         margin: 1% auto;
    }
     .big-padding {
         padding-left: 4%;
         padding-right: 4%;
     }
     .pics-group {
         padding-left: 5%;
         padding-right: 5%;
     }
     h4 {
         font-size:18px;
     }
     body {
        padding-top: 55px; 
    }
}

@media (max-width: 475px) {
    #welcome-mobile {
        line-height: 0.3em;
        font-size: 60px;
     }
     
    #mealmate {
        font-size: 40px;
        line-height: 0.3em;
    }
}

@media (max-width: 385px) {
    #home-header {
        top: 35%;
    }
    
    #welcome-mobile {
        line-height: 0em;
        font-size: 45px;
     }
     
    #mealmate {
        font-size: 25px;
        line-height: 0em;
    }
}

